add idl tests for ref tracking